# binguo-crawler

./: merge_comments_to_excel.py
Agents-评估/: README.md  comment_agent.py  pyproject.toml  requirements.txt  test_agent.py  评论分析结果_全部_incremental copy.xlsx  评论分析结果_全部_懂车帝.xlsx  评论分析结果_懂车帝.xlsx  评论分析结果_抖音.xlsx  评论分析结果_抖音_incremental.xlsx  需求.md
Agents-评估/ok/: 懂车帝评论 - 副本.xlsx  懂车帝评论.xlsx  抖音评论_清洗后_报告.txt  评论分析结果_懂车帝-吉利2164_incremental.xlsx  评论分析结果_懂车帝-问届_incremental.xlsx  评论分析结果_懂车帝.csv.backup_20260227180550  评论分析结果_懂车帝吉利后一版.xlsx
DouyinCrawler/: README.md  config.py  crawler.py  data_store.py  douyin_client.py  pyproject.toml  utils.py
DouyinCrawler_2026_02_26_10_04_38/DouyinCrawler/: config.py  crawler.py  douyin_client.py  main.py
DouyinCrawler_2026_02_26_10_04_38/DouyinCrawler/templates/: index.html
MediaCrawler/media_platform/douyin/: client.py
awesome-spider-master/: README.md  gui.py  requiredments.txt
awesome-spider-master/scripts/: __init__.py  autohome_api_volvo.py  common.py  dcd_html_volvo.py  tencent_api_volvo.py  toutiao_html_volvo.py  yiche_news_volvo.py  yiche_video_volvo.py
awesome-spider-master/spiders/: autohome_spider.py  base_spider.py  dcd_spider.py  tencent_spider.py  toutiao_spider.py  yiche_spider.py
awesome-spider-master/util/: csv_to_json.py  dcd_browser.py  fix_dates_in_json.py  merge_csv.py  save_to_csv.py  yiche_browser.py
