[project]
name = "douyin-crawler"
version = "1.0.0"
description = "抖音视频评论爬取工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "playwright>=1.41.0",
    "aiofiles>=23.2.1",
    "PyExecJS>=1.5.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
